# feminicidios

./: arimaOtimizado.py  previsaoArima.py  previsaoFinal.py  previsaoFinalSarima.py  previsaoSarima.py  pyproject.toml  sarimaOtimizado.py  validacaoCruzada.py
data/: PopulaçãoFeminina.csv  feminicidios.csv
