[project]
name = "feminicidios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.0.11",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "statsmodels>=0.14.4",
    "urllib3>=2.2.3",
]
